# spam

./: .gitignore  README.md  flake.nix  spam.nimble
.github/workflows/: auto-index.yml
doc/: spam.man1.md
pkgs/: default.nix  package.nix
spam/: .gitignore  spam.nimble
spam-db/: .gitignore  Cargo.toml  README.md
spam-db/benches/: query.rs
spam-db/src/: error.rs  format.rs  lib.rs  options.rs  packages.rs
spam-db/tests/: integration.rs
spam/doc/: spam.man1.md
spam/src/: cache.nim  filemeta.nim  index.nim  spam.nim
spam/tests/: test_index_utf8.nim
src/: spam.nim
test/: opt.nix
