[package]
name = "spam-db"
version = "0.1.0"
edition = "2024"
description = "Parser and query library for SPAM databases"
license = "MPL-2.0"
repository = "https://github.com/feel-co/spam"
readme = "README.md"
keywords = ["nix", "nixos", "database", "search"]
categories = ["parser-implementations", "database"]

[dependencies]
zstd = "0.13.3"
