[package]
name = "spam-db"
version = "0.2.3"
edition = "2024"
description = "Parser and query library for SPAM databases"
license = "MPL-2.0"
repository = "https://github.com/feel-co/spam"
readme = "README.md"
keywords = ["nix", "nixos", "database", "search"]
categories = ["parser-implementations", "database"]

[dependencies]
zstd = "0.13.3"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
harness = false
name = "query"
